# PSYS

./: .gitignore  main.py  pyproject.toml
backend/api/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_sell_user.py  0003_alter_sell_products_alter_sellitem_sell.py
backend/backend/: settings.py  urls.py
