[project]
name = "psys"
version = "0.1.0"
description = "Simple api of e-commerce."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.8",
  "django-cors-headers>=4.9.0",
  "djangorestframework>=3.16.1",
  "djangorestframework-simplejwt>=5.5.1",
  "drf-spectacular>=0.29.0",
  "python-dotenv>=1.2.1",
]
